[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Matt <mattjensen@fastmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
SQLAlchemy = "^1.4.32"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'tests.leet'
